--- a/index.html
+++ b/index.html
@@ -114,25 +114,11 @@
         Servidor - Rodando
       </a>
 
-      <a class="btn" href="#" target="_blank" rel="noopener noreferrer">
+      <a class="btn" href="https://drive.google.com/drive/folders/1Vvh8Uv0RzTrvBeU7AlmkFIZI7CRzJEpU" target="_blank" rel="noopener noreferrer">
         <span class="icon" aria-hidden="true">📄</span>
-        Trabalhos / Serviços
+        Tabelas, Diagramas e etc
       </a>
 
-      <a class="btn" href="#" target="_blank" rel="noopener noreferrer">
-        <span class="icon" aria-hidden="true">🎓</span>
-        Projeto Acadêmico
-      </a>
-
-      <a class="btn" href="#" target="_blank" rel="noopener noreferrer">
-        <span class="icon" aria-hidden="true">🎓</span>
-        Currículo (PDF)
-      </a>
-
-      <a class="btn" href="mailto:seu-email@exemplo.com" aria-label="Enviar email">
-        <span class="icon" aria-hidden="true">📄</span>
-        Entrar em contato
-      </a>
     </section>
 
   </main>
